--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -24,7 +24,13 @@ body
    .container
       padding: 0 spacing(10)
 
+@include useMinWidth(1150px)
+   .container 
+      padding: 0 spacing(16)
+
+
+
 @import ./navbar
 @import ./presentation
 @import ./decoration
-
+@import ./carousel
