--- a/src/styles/presentation.sass
+++ b/src/styles/presentation.sass
@@ -3,6 +3,7 @@
     grid-template-columns: 2fr 1fr
     grid-template-rows: 3fr 2fr 1fr
     grid-template-areas: 'header decoration' 'desc desc' 'actions actions'
+    margin-bottom: 10rem
 
     &__btn 
         border-radius: 4px
