--- a/src/styles/carousel.sass
+++ b/src/styles/carousel.sass
@@ -1,16 +1,25 @@
 .carlousel
    width: 100%
-   background: #5c5c58
-   height: 200px
+   background: transparent
    margin-bottom: 100px
    display: flex
    overflow: scroll
-   cursor: pointer
+   cursor: grab
    user-select: none
    overflow-y: hidden
 
    &__box
       min-width: 400px
-      height: 80%
       background: orange
       margin: 20px
+      position: relative
+      height: 300px
+
+      *
+         color: white
+
+      &__overlay
+         background: rgba(97, 74, 237, 0.65)
+         position: absolute
+         width: 100%
+         bottom: 0
