--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -24,13 +24,16 @@ body
    .container
       padding: 0 spacing(10)
 
+@include useMinWidth(630px)
+   .section-header
+      font-size: $sectionHeadersFontSize
+
 @include useMinWidth(1150px)
    .container 
       padding: 0 spacing(16)
-
-
 
 @import ./navbar
 @import ./presentation
 @import ./decoration
 @import ./carousel
+@import ./projects
