--- a/src/styles/decoration.sass
+++ b/src/styles/decoration.sass
@@ -39,3 +39,10 @@ $decoration-rect-color:#6C63FF
    @include useMinWidth(850px)
       & 
          display: block
+
+      // span:first-of-type
+      //    top: 40%
+      //    left: 20px
+
+      span:nth-of-type(2)
+         top: 18%
