--- a/src/styles/carousel.sass
+++ b/src/styles/carousel.sass
@@ -8,18 +8,44 @@
    user-select: none
    overflow-y: hidden
 
+   &::-webkit-scrollbar 
+      width: 40px
+      height: spacing(1)
+
+   &::-webkit-scrollbar-track 
+      box-shadow: none
+      border-radius: 10px
+
+   &::-webkit-scrollbar-thumb 
+      background: $primaryBlue
+      border-radius: 10px
+
+   &::-webkit-scrollbar-thumb:hover 
+      background: $primaryBlue
+
    &__box
       min-width: 400px
-      background: orange
       margin: 20px
       position: relative
       height: 300px
 
       *
          color: white
+      
+      img
+         width: 100%
+         z-index: -1
+         user-select: text
 
       &__overlay
          background: rgba(97, 74, 237, 0.65)
          position: absolute
          width: 100%
          bottom: 0
+         padding: 1rem .5rem
+
+         p  
+            display: -webkit-box
+            -webkit-line-clamp: 2
+            -webkit-box-orient: vertical
+            overflow: hidden
