--- a/src/styles/carousel.sass
+++ b/src/styles/carousel.sass
@@ -1,7 +1,7 @@
 .carlousel
    width: 100%
    background: transparent
-   margin-bottom: 100px
+   margin-bottom: 20px
    display: flex
    overflow: scroll
    cursor: grab
@@ -24,12 +24,12 @@
       background: $primaryBlue
 
    &__box
-      min-width: 400px
+      min-width: 270px
       margin: 20px
       position: relative
-      height: 300px
+      height: 230px
 
-      *
+      &__overlay *
          color: white
       
       img
@@ -38,14 +38,26 @@
          user-select: text
 
       &__overlay
-         background: rgba(97, 74, 237, 0.65)
+         background: rgba(97, 74, 237, 0.82)
          position: absolute
          width: 100%
          bottom: 0
-         padding: 1rem .5rem
+         padding: 1rem .5rem .5rem 1rem
+         padding-top: 0
+
+         h
+            margin-top: 0
 
          p  
             display: -webkit-box
             -webkit-line-clamp: 2
             -webkit-box-orient: vertical
             overflow: hidden
+            font-size: 14px
+
+   @include useMinWidth(750px)
+      &
+         width: 80%
+         margin: 0 auto
+
+   
